Fix security config